--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vanilla-extract/vite-plugin": "^5.1.1",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "immer": "^10.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
